--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "motion": "^12.14.0",
     "nes.css": "^2.3.0",
     "next": "15.3.2",
+    "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "styled-components": "^6.1.18",
